Add documentation and fix controllers.
